--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "author": "Alexey Avdeev <aad.jerry@gmail.com>",
   "license": "MIT",
   "babel": {
-    "presets": ["latest"]
+    "presets": [
+      "latest"
+    ]
   },
   "eslintConfig": {
     "parser": "babel-eslint",
@@ -27,15 +29,28 @@
       "es6": true
     }
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/**/*.test.{js,jsx}"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "testRegex": "tests/.*\\.test\\.js$"
+  },
   "devDependencies": {
     "babel-core": "6.23.1",
     "babel-eslint": "7.1.1",
     "babel-loader": "6.3.2",
+    "babel-polyfill": "6.23.0",
     "babel-preset-latest": "6.22.0",
     "eslint": "3.15.0",
     "eslint-config-airbnb-base": "11.1.0",
     "eslint-plugin-import": "2.2.0",
-    "jest-cli": "18.1.0",
+    "faker": "3.1.0",
+    "jest": "18.1.0",
     "rimraf": "2.5.4",
     "webpack": "2.2.1"
   }
