--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "pre-commit": "lint:staged",
   "babel": {
     "presets": [
-      "latest"
+      "env"
     ]
   },
   "eslintConfig": {
@@ -48,6 +48,13 @@
       "browser": true,
       "jest": true,
       "es6": true
+    },
+    "settings": {
+      "import/resolver": {
+        "webpack": {
+          "config": "webpack.config.js"
+        }
+      }
     }
   },
   "jest": {
@@ -64,18 +71,19 @@
   "devDependencies": {
     "babel-core": "6.23.1",
     "babel-eslint": "7.1.1",
-    "babel-loader": "6.3.2",
+    "babel-loader": "6.4.0",
     "babel-polyfill": "6.23.0",
-    "babel-preset-latest": "6.22.0",
-    "coveralls": "2.11.16",
-    "eslint": "3.15.0",
-    "eslint-config-airbnb-base": "11.1.0",
+    "babel-preset-env": "1.2.1",
+    "coveralls": "2.12.0",
+    "eslint": "3.17.1",
+    "eslint-config-airbnb-base": "11.1.1",
+    "eslint-import-resolver-webpack": "0.8.1",
     "eslint-plugin-import": "2.2.0",
-    "faker": "3.1.0",
-    "jest": "18.1.0",
+    "faker": "4.1.0",
+    "jest": "19.0.2",
     "lint-staged": "3.3.1",
     "pre-commit": "1.2.2",
-    "rimraf": "2.6.0",
+    "rimraf": "2.6.1",
     "webpack": "2.2.1"
   }
 }
