--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
+      "!src/index.js",
       "!src/**/*.test.{js,jsx}"
     ],
     "moduleDirectories": [
