--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "bugs": "https://github.com/avdeev/vanilla-sharing/issues",
   "version": "1.2.0",
   "main": "dist/vanilla-sharing.js",
+  "module": "src/index.js",
+  "modules.root": "src/sharers",
   "scripts": {
     "prebuild": "npm run build:clean",
     "build": "webpack",
@@ -30,7 +32,8 @@
   "author": "Alexey Avdeev <aad.jerry@gmail.com>",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "lint-staged": {
     "*.js": "lint"
