--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "eslint-import-resolver-webpack": "0.8.3",
     "eslint-plugin-import": "2.8.0",
     "faker": "4.1.0",
-    "jest": "22.0.1",
+    "jest-cli": "22.0.3",
     "lint-staged": "6.0.0",
     "pre-commit": "1.2.2",
     "rimraf": "2.6.2",
