chore: improve build

--- a/package.json
+++ b/package.json
@@ -13,22 +13,18 @@
   "homepage": "https://github.com/avdeev/vanilla-sharing",
   "bugs": "https://github.com/avdeev/vanilla-sharing/issues",
   "version": "3.0.2",
-  "main": "dist/vanilla-sharing.cjs.js",
+  "main": "dist/vanilla-sharing.umd.js",
   "module": "dist/vanilla-sharing.esm.js",
-  "browser": "dist/vanilla-sharing.umd.js",
   "scripts": {
     "precommit": "lint-staged",
     "size": "size-limit",
-    "prebuild": "npm run build:clean",
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "build:clean": "rimraf ./dist",
-    "lint": "eslint --ignore-path .gitignore . --ignore-pattern dist",
-    "pretest": "npm run test:clean && npm run lint && npm run size",
-    "test:clean": "rimraf ./coverage",
+    "lint": "eslint --ignore-path .gitignore .",
+    "pretest": "npm run lint && npm run build && npm run size",
     "test": "jest --coverage",
     "test:watch": "jest --watchAll",
-    "prepublishOnly": "npm run build",
+    "prepublish": "npm test",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": "git@github.com:avdeev/vanilla-sharing.git",
@@ -90,9 +86,7 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "devDependencies": {
-    "babel-core": "6.26.0",
     "babel-eslint": "8.0.3",
-    "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
     "coveralls": "3.0.0",
     "eslint": "4.13.1",
@@ -103,7 +97,6 @@
     "husky": "0.14.3",
     "jest-cli": "22.0.3",
     "lint-staged": "6.0.0",
-    "rimraf": "2.6.2",
     "rollup": "0.50.0",
     "rollup-plugin-babel": "3.0.3",
     "size-limit": "0.13.2"
