--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "lint": "eslint --ignore-path .gitignore .",
-    "pretest": "npm run lint && npm run build && npm run size",
-    "test": "jest --coverage",
+    "test": "npm run lint && npm run build && npm run size && jest --coverage",
     "test:watch": "jest --watchAll",
-    "prepublish": "npm test",
+    "prepublish": "npm run test",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": "git@github.com:avdeev/vanilla-sharing.git",
