--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint --ignore-path .gitignore .",
     "test": "npm run lint && npm run build && npm run size && jest --coverage",
     "test:watch": "jest --watchAll",
-    "prepublish": "npm run test",
+    "prepare": "npm run test",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": "git@github.com:avdeev/vanilla-sharing.git",
