--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vanilla-sharing",
-  "description": "Small simple tool for sharing url, title, description and image to VK, Facebook, OK, G+, Twitter and Mail",
+  "description": "Small simple tool for sharing url, title, description and image to VK, Facebook, OK, G+, Twitter, email, and Mail",
   "keywords": [
     "sharing",
     "vk",
@@ -35,11 +35,11 @@
   "size-limit": [
     {
       "path": "dist/vanilla-sharing.umd.js",
-      "limit": "1.2 KB"
+      "limit": "1.3 KB"
     },
     {
       "path": "dist/vanilla-sharing.esm.js",
-      "limit": "1.2 KB"
+      "limit": "1.3 KB"
     }
   ],
   "lint-staged": {
