--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "eslint-import-resolver-webpack": "0.9.0",
     "eslint-plugin-import": "2.11.0",
     "faker": "4.1.0",
+    "hoek": "~4.2.1",
     "husky": "0.14.3",
     "jest-cli": "22.4.3",
     "lint-staged": "7.1.0",
