--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     }
   ],
   "lint-staged": {
-    "*.js": "lint"
+    "*.js": "npm run lint -- "
   },
   "babel": {
     "env": {
@@ -95,7 +95,7 @@
     "babel-preset-env": "^1.7.0",
     "coveralls": "^3.0.1",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-airbnb-base": "^13.0.0",
     "eslint-import-resolver-webpack": "^0.10.0",
     "eslint-plugin-import": "^2.12.0",
     "faker": "^4.1.0",
