--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "eslint-plugin-import": "^2.14.0",
     "faker": "^4.1.0",
     "husky": "^1.2.0",
-    "jest-cli": "^23.6.0",
+    "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^3.0.7",
