--- a/package.json
+++ b/package.json
@@ -45,35 +45,17 @@
   "size-limit": [
     {
       "path": "dist/vanilla-sharing.umd.js",
-      "limit": "1.5 KB"
+      "limit": "1.4 KB"
     },
     {
       "path": "dist/vanilla-sharing.esm.js",
-      "limit": "1.5 KB"
+      "limit": "1.4 KB"
     }
   ],
   "lint-staged": {
     "*.js": "npm run lint -- "
   },
-  "babel": {
-    "env": {
-      "test": {
-        "presets": [
-          "env"
-        ]
-      },
-      "development": {
-        "presets": [
-          [
-            "env",
-            {
-              "modules": false
-            }
-          ]
-        ]
-      }
-    }
-  },
+  "browserslist": "> 0.25%, not dead",
   "eslintConfig": {
     "parser": "babel-eslint",
     "extends": "airbnb-base",
@@ -100,20 +82,21 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "babel-eslint": "^10.0.1",
-    "babel-preset-env": "^1.7.0",
-    "coveralls": "^3.0.2",
-    "eslint": "^4.19.1",
+    "coveralls": "^3.0.3",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-plugin-import": "^2.17.2",
     "faker": "^4.1.0",
     "husky": "^1.3.1",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.1.4",
-    "rollup": "^1.2.2",
-    "rollup-plugin-babel": "^3.0.7",
-    "size-limit": "^0.21.1",
-    "typescript": "^3.3.3"
+    "jest": "^24.7.1",
+    "lint-staged": "^8.1.5",
+    "rollup": "^1.10.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "size-limit": "^1.1.2",
+    "typescript": "^3.4.4"
   }
 }
