chore: use npm run coveralls

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,10 +23,6 @@ jobs:
       run: |
         npm ci
         npm test
+        npm run coveralls
       env:
         CI: true
-
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
