--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "lint-staged": "10.0.7",
     "rollup": "1.31.0",
     "rollup-plugin-babel": "4.3.3",
+    "size-limit": "4.0.1",
     "typescript": "3.7.5"
   },
   "husky": {
