feat: improve typings

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "lint": "eslint --ignore-path .gitignore .",
-    "typescript-test": "tsc --project typing-tests",
-    "test": "npm run lint && npm run typescript-test && npm run build && npm run size && jest --coverage",
+    "typing-tests": "tsc --project typing-tests",
+    "test": "npm run lint && npm run typing-tests && npm run build && npm run size && jest --coverage",
     "test:watch": "jest --watchAll"
   },
   "repository": "git@github.com:avdeev/vanilla-sharing.git",
