--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "homepage": "https://github.com/avdeev/vanilla-sharing",
   "bugs": "https://github.com/avdeev/vanilla-sharing/issues",
   "version": "6.0.4",
-  "main": "dist/vanilla-sharing.umd.js",
-  "module": "dist/vanilla-sharing.esm.js",
+  "main": "./dist/vanilla-sharing.umd.js",
+  "module": "./dist/vanilla-sharing.esm.js",
+  "exports": {
+    ".": "./dist/vanilla-sharing.esm.js"
+  },
   "types": "vanilla-sharing.d.ts",
   "scripts": {
     "prepublishOnly": "npm test",
