--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "lint": "eslint --ignore-path .gitignore .",
     "typing-tests": "tsc --project typing-tests",
     "test": "npm run lint && npm run typing-tests && npm run build && npm run size && jest --coverage",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "prepare": "husky install"
   },
   "repository": "git@github.com:avdeev/vanilla-sharing.git",
   "author": "Alexey Avdeev <aad.jerry@gmail.com>",
@@ -96,16 +97,11 @@
     "eslint-import-resolver-webpack": "0.13.0",
     "eslint-plugin-import": "2.22.1",
     "faker": "5.3.1",
-    "husky": "4.3.8",
+    "husky": "6.0.0",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
     "rollup": "2.38.4",
     "size-limit": "4.9.2",
     "typescript": "4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   }
 }
