--- a/package.json
+++ b/package.json
@@ -88,22 +88,22 @@
     "testEnvironment": "jsdom"
   },
   "devDependencies": {
-    "@babel/core": "7.16.0",
-    "@babel/eslint-parser": "7.16.3",
-    "@babel/preset-env": "7.16.4",
+    "@babel/core": "7.16.12",
+    "@babel/eslint-parser": "7.16.5",
+    "@babel/preset-env": "7.16.11",
+    "@faker-js/faker": "6.0.0-alpha.5",
     "@rollup/plugin-babel": "5.3.0",
-    "@size-limit/preset-small-lib": "7.0.4",
+    "@size-limit/preset-small-lib": "7.0.5",
     "@types/estree": "0.0.50",
-    "eslint": "8.4.1",
+    "eslint": "8.8.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-import-resolver-webpack": "0.13.2",
-    "eslint-plugin-import": "2.25.3",
-    "faker": "5.5.3",
+    "eslint-plugin-import": "2.25.4",
     "husky": "7.0.4",
-    "jest": "27.4.4",
-    "lint-staged": "12.1.2",
-    "rollup": "2.61.1",
-    "size-limit": "7.0.4",
-    "typescript": "4.5.3"
+    "jest": "27.4.7",
+    "lint-staged": "12.3.3",
+    "rollup": "2.67.0",
+    "size-limit": "7.0.5",
+    "typescript": "4.5.5"
   }
 }
