--- a/package.json
+++ b/package.json
@@ -69,16 +69,23 @@
       "jest": true,
       "es6": true
     },
+    "rules": {
+      "comma-dangle": "off"
+    },
     "settings": {
       "import/resolver": {
         "node": {
-          "extensions": [".js", ".jsx", ".ts", ".tsx"]
+          "extensions": [
+            ".js",
+            ".jsx",
+            ".ts",
+            ".tsx"
+          ]
         }
       }
     }
   },
   "jest": {
-    "testURL": "http://localhost/",
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/main.js",
@@ -89,25 +96,29 @@
       "src"
     ],
     "testRegex": "tests/.*\\.test\\.js$",
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "testEnvironmentOptions": {
+      "url": "http://localhost/"
+    }
   },
   "devDependencies": {
-    "@babel/core": "7.22.8",
-    "@babel/eslint-parser": "7.22.7",
-    "@babel/preset-env": "7.22.7",
-    "@faker-js/faker": "7.6.0",
+    "@babel/core": "7.22.10",
+    "@babel/eslint-parser": "7.22.10",
+    "@babel/preset-env": "7.22.10",
+    "@faker-js/faker": "8.0.2",
     "@rollup/plugin-babel": "6.0.3",
     "@size-limit/preset-small-lib": "8.2.6",
-    "@types/estree": "0.0.52",
-    "eslint": "8.44.0",
+    "@types/node": "18.17.4",
+    "eslint": "8.46.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-import-resolver-webpack": "0.13.2",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-import-resolver-webpack": "0.13.4",
+    "eslint-plugin-import": "2.28.0",
     "husky": "8.0.3",
-    "jest": "27.5.1",
+    "jest": "29.6.2",
+    "jest-environment-jsdom": "29.6.2",
     "lint-staged": "13.2.3",
-    "rollup": "2.79.1",
-    "size-limit": "7.0.8",
-    "typescript": "4.8.4"
+    "rollup": "3.28.0",
+    "size-limit": "8.2.6",
+    "typescript": "5.1.6"
   }
 }
